--- a/password_verification.html
+++ b/password_verification.html
@@ -16,7 +16,7 @@
             var enteredPassword = document.getElementById('password').value;
 
             if (enteredPassword === expectedPassword) {
-                alert('Password is correct. You've found the gift treasure!');
+                alert('Password is correct. You have found the gift treasure!');
             } else {
                 alert('Incorrect password. Access denied!');
             }
